--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -9,6 +9,49 @@
 <div class="container body-content">
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+<!--    <p th:text="${jobs}"></p>-->
+
+<!--<table>-->
+<!--    <th:block th:each="info : ${jobs}">-->
+<!--    <tr>-->
+<!--        <td th:text="${info}"></td>-->
+<!--    </tr>-->
+<!--    </th:block>-->
+<!--</table>&ndash;&gt;-->
+
+
+    <table th:each="job : ${jobs}" class="job-listing">
+            <tr>
+                <td>ID</td>
+                <td th:text="${job.getId()}"></td>
+            </tr>
+            <tr>
+                <td>Name</td>
+                <td th:text="${job.getName()}"></td>
+            </tr>
+            <tr>
+                <td>Employer</td>
+                <td th:text="${job.getEmployer()}"></td>
+            </tr>
+            <tr>
+                <td>Location</td>
+                <td th:text="${job.getLocation()}"></td>
+            </tr>
+            <tr>
+                <td>Position Type</td>
+                <td th:text="${job.getPositionType()}"></td>
+            </tr>
+            <tr>
+                <td>Skill</td>
+                <td th:text="${job.getCoreCompetency()}"></td>
+            </tr>
+    </table>
+    <br></br>
+
+<!--    <ol>-->
+<!--    <li th:each="info : ${jobs}" th:text="${info}"></li>-->
+<!--</ol>-->
+
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
 
